z-index fix

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -504,7 +504,7 @@ p.style1 {
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 0 0 20px 130px;
+    border-width: 0 0 13px 82px;
     border-color: transparent transparent #fff;
     content: '';
 }
@@ -5058,7 +5058,6 @@ textarea {
 @media only screen and (max-width: 991px) {
     #wrapper > .container{padding: 0 15px;}
     .small-header #nav ol{padding: 2px 0 0;}
-    #header .cart:before { border-width: 0 0 15px 105px; }
     #nav ol { font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
     #nav ol > li { margin: 0 2px 0 0; }
     #nav ol > li > a { padding: 5px 8px; }
